--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,25 @@
       <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     </head>
     <body>
-      <div class="container">
+      <div class="container" style='background-image: url('http://www.businesskitchen.fi/wp/wp-content/uploads/2016/03/sw-bannerii.jpg')'>
+        <div class='continer' style='text-align: center; margin-top: 50px;'>
+          <a href='/'><img src='http://trichy.startupweekend.org/files/2014/09/StartupWeekend_PrimaryWithBackground_V1_600_255.png' style='height: 100px; width: 300px margin-top: 30px;'></a>
+        </div>
+        <hr>
+
+          <div class='container row' style='text-align: center'>
+            <div class='col-md-4'>
+              <h3><a href="/team_form">Add teams</a></h3>
+            </div>
+            <div class='col-md-4'>
+              <h3><a href="/members">See members</a></h3>
+            </div>
+            <div class='col-md-4'>
+              <h3><a href="/member_form">Add members</a></h3>
+            </div>
+          </div>
+
+        <hr>
         <%= yield %>
       </div>
     </body>
