fixed bug in add memeber

--- a/views/success_add_member.erb
+++ b/views/success_add_member.erb
@@ -1,2 +1,2 @@
 <h1>You have successfully added a member!</h1>
-<a href='/team/<%= @team.id %>'> <h3>Go back to team!</h3> </a>
+<a href='/'>Go home</a>
