--- a/views/members.erb
+++ b/views/members.erb
@@ -1,5 +1,7 @@
 <% @members.each() do |member| %>
-  <h1><%= member.membername %> | <%= member.membertype %></h1>
+  <h3>Member name: <%= member.membername %> </h3>
+  <h5>Member type: <%= member.membertype %> </h5>
+  <hr>
 <% end %>
 
-<a href='/member_form'><h1>Add a new member</h1></a>
+<a href='/member_form'><h3>Add a new member</h3></a>
