--- a/views/team.erb
+++ b/views/team.erb
@@ -1,5 +1,5 @@
-<h1> <%= @team.teamname %> </h1>
-<h3> <%= @team.description %> </h3>
+<h1> Team name: <%= @team.teamname %> </h1>
+<h3> Team description: <%= @team.description %> </h3>
 <hr>
 <h3> Team members: </h3>
 <ol>
