--- a/views/add_member_to_team.erb
+++ b/views/add_member_to_team.erb
@@ -1,20 +1,21 @@
-<form action='/team/<%= @team.id %>' method='post' style='overflow: hidden'>
   <br>
   <br>
   <div style='float: left; clear: none;'>
-    <% @members.each() do |member| %>
-      <div class='container row'>
-        <input id='idmember' name='idmember' type='radio' style='float: left; clear: none; margin: 5px 5px 0 5px' value= "<%= member.memberid %>">
-        <label for='idmember' style='  float: left; clear: none; display: block; padding: 2px 1em 0 0;'> <%= member.membername %> | <%= member.membertype %> <label>
-      </div>
-    <% end %>
+  <% if @members.length() > 0 %>
+
+    <form action='/team/<%= @team.id %>' method='post' style='overflow: hidden'>
+      <% @members.each() do |member| %>
+        <div class='container row'>
+          <input id='idmember' name='idmember' type='radio' style='float: left; clear: none; margin: 5px 5px 0 5px' value= "<%= member.memberid %>">
+          <label for='idmember' style='  float: left; clear: none; display: block; padding: 2px 1em 0 0;'> <%= member.membername %> | <%= member.membertype %> <label>
+        </div>
+      <% end %>
+      <button type='submit'>Add member</button>
+    </form>
+
+  <% else %>
+    <h3>There are no members yet!</h3>
+    <h3><a href="/member_form">Add members</a></h3>
+
+  <% end %>
   </div>
-
-
-    <br>
-    <br>
-    <br>
-    <br>
-
-  <button type='submit'>Add member</button>
-</form>
