--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,11 +3,12 @@
     <head>
       <title>Startup Weekend Team Tracker </title>
       <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+      <link type="text/css" rel="stylesheet" href="/style.css"/>
     </head>
     <body>
       <div class="container" style='background-image: url('http://www.businesskitchen.fi/wp/wp-content/uploads/2016/03/sw-bannerii.jpg')'>
         <div class='continer' style='text-align: center; margin-top: 50px;'>
-          <a href='/'><img src='http://trichy.startupweekend.org/files/2014/09/StartupWeekend_PrimaryWithBackground_V1_600_255.png' style='height: 100px; width: 300px margin-top: 30px;'></a>
+          <a href='/'><img src='http://trichy.startupweekend.org/files/2014/09/StartupWeekend_PrimaryWithBackground_V1_600_255.png' style='height: 100px; width: 300px margin-top: 10px;'></a>
         </div>
         <hr>
 
